[metadata]
name = pyvistaqt
version = attr: pyvistaqt._version.__version__
description = pyvista qt plotter
long_description = file: README.rst, LICENSE
author = PyVista Developers
author_email = info@pyvista.org
license = MIT
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Science/Research,
    Topic :: Scientific/Engineering :: Information Analysis,
    License :: OSI Approved :: MIT License,
    Operating System :: Microsoft :: Windows,
    Operating System :: POSIX,
    Operating System :: MacOS,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8
url = https://github.com/pyvista/pyvistaqt
keywords =
    vtk
    numpy
    plotting
    mesh
    qt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = python>="3.6"
install_requires =
    pyvista>="0.32.0"
    QtPy>="1.9.0"

[options.package_data]
pyvistaqt =
    data/*.png